fixed navbar spacing

--- a/css/main.css
+++ b/css/main.css
@@ -317,3 +317,16 @@ border-radius: 10px;
   #sourcesBanner {
       height: 180px;
   }
+
+/* nav bar edits */
+.nav-link.py-3.px-0.px-lg-3 {
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+    max-height: 56px;
+}
+
+@media (min-width: 992px) {
+    #mainNav .navbar-brand {
+        font-size: 1.7rem;
+    }
+}
